src/objects/ADvendio__BlockedAdTypeAssignment__c.object
<CustomObject>
    <fields>
        <fullName>ADvendio__BlockedAdType__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Blocked Ad Type</label>
        <referenceTo>ADvendio__Ad_Type__c</referenceTo>
        <relationshipLabel>Blocked AdTypes (Blocked Ad Type)</relationshipLabel>
        <relationshipName>BlockedAdTypeAssignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ADvendio__Factor__c</fullName>
        <inlineHelpText>The master ad type blocks this many instances of the blocked ad type.</inlineHelpText>
        <label>Factor</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ADvendio__MasterAdType__c</fullName>
        <label>Master Ad Type</label>
        <referenceTo>ADvendio__Ad_Type__c</referenceTo>
        <relationshipLabel>Master Ad Types</relationshipLabel>
        <relationshipName>MasterAdTypeAssignments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ADvendio__UniqueKey__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Unique Key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Blocked AdType</label>
    <listViews>
        <fullName>ADvendio__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>BA-{00000}</displayFormat>
        <label>Blocked AdType Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Blocked AdTypes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>